--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- Updated Title -->
-  <title>StablePay - Revolutionizing contactless Payments with Crypto</title>
+  <title>StablePay - Crypto Payments</title>
 
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -100,7 +100,7 @@
         <div class="row">
           <div class="col-lg-6">
             <!-- Updated Hero Text -->
-            <h2 data-aos="fade-up" data-aos-delay="100">Revolutionizing Contactless Payments with Crypto</h2>
+            <h2 data-aos="fade-up" data-aos-delay="100">Revolutionizing Contactless Payments with Crypto Stablecoins</h2>
             <p data-aos="fade-up" data-aos-delay="200">
               Experience real-time settlements and near-zero fees with StablePay, the next evolution in contactless, stablecoin-based transactions.
             </p>
