--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <!-- Updated Hero Text -->
             <h2 data-aos="fade-up" data-aos-delay="100">Revolutionizing Contactless Payments with Crypto Stablecoins</h2>
             <p data-aos="fade-up" data-aos-delay="200">
-              Experience real-time settlements and near-zero fees with StablePay, the next evolution in contactless, stablecoin-based transactions.
+              Experience real-time settlements and near-zero fees with StablePay, the next evolution in contactless, multi-chain, stablecoin-based transactions.
             </p>
             <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
               <a href="#about" class="btn-get-started">Learn More</a>
