Polygon to Stellar

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -155,13 +154,14 @@
           </script>
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="assets/img/crypto/ripple.png" class="img-fluid" alt="Ripple (XRP)"></div>
-            <div class="swiper-slide"><img src="assets/img/crypto/solana2.png" class="img-fluid" alt="Stellar"></div>
+            <div class="swiper-slide"><img src="assets/img/crypto/solana2.png" class="img-fluid" alt="Solana"></div>
+            <!-- Previously referenced Polygon now becomes Stellar -->
             <div class="swiper-slide"><img src="assets/img/crypto/polygon.png" class="img-fluid" alt="Stellar"></div>
             <div class="swiper-slide"><img src="assets/img/crypto/circle.png" class="img-fluid" alt="Circle"></div>
+            <!-- USDC image now labeled as Stellar Stablecoin -->
             <div class="swiper-slide"><img src="assets/img/crypto/usdc.png" class="img-fluid" alt="Stellar Stablecoin"></div>
+            <!-- EURC image now labeled as Stellar Stablecoin -->
             <div class="swiper-slide"><img src="assets/img/crypto/eurc2.png" class="img-fluid" alt="Stellar Stablecoin"></div>
-            <!--<div class="swiper-slide"><img src="assets/img/crypto/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/crypto/client-8.png" class="img-fluid" alt=""></div>-->
           </div>
           <div class="swiper-pagination"></div>
         </div>
