Polygon to Stellar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -104,7 +105,7 @@
               Experience real-time settlements and near-zero fees with StablePay, the next evolution in contactless, multi-chain, stablecoin-based transactions.
             </p>
             <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-              <a href="#about" class="btn-get-started">Learn More</a>
+              <a href="#about" class="btn-getstarted">Learn More</a>
               <!--<a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center">
                 <i class="bi bi-play-circle"></i><span>Watch Video</span>-->
               </a>
@@ -153,15 +154,17 @@
             }
           </script>
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/crypto/ripple.png" class="img-fluid" alt="Ripple (XRP)"></div>
-            <div class="swiper-slide"><img src="assets/img/crypto/solana2.png" class="img-fluid" alt="Solana"></div>
+            <div class="swiper-slide"><img src="assets/img/crypto/ripple.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/crypto/solana2.png" class="img-fluid" alt=""></div>
             <!-- Previously referenced Polygon now becomes Stellar -->
             <div class="swiper-slide"><img src="assets/img/crypto/polygon.png" class="img-fluid" alt="Stellar"></div>
-            <div class="swiper-slide"><img src="assets/img/crypto/circle.png" class="img-fluid" alt="Circle"></div>
+            <div class="swiper-slide"><img src="assets/img/crypto/circle.png" class="img-fluid" alt=""></div>
             <!-- USDC image now labeled as Stellar Stablecoin -->
             <div class="swiper-slide"><img src="assets/img/crypto/usdc.png" class="img-fluid" alt="Stellar Stablecoin"></div>
             <!-- EURC image now labeled as Stellar Stablecoin -->
             <div class="swiper-slide"><img src="assets/img/crypto/eurc2.png" class="img-fluid" alt="Stellar Stablecoin"></div>
+            <!--<div class="swiper-slide"><img src="assets/img/crypto/client-7.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/crypto/client-8.png" class="img-fluid" alt=""></div>-->
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -193,7 +196,7 @@
               <div class="col-md-6 icon-box position-relative">
                 <i class="bi bi-credit-card-2-front"></i>
                 <h4><a href="" class="stretched-link">Ultra-Low Fees</a></h4>
-                <p>We leverage stablecoins on XRPL and Stellar to reduce costs for retailers.</p>
+                <p>We leverage stablecoins on XRPL, Solana, and Stellar to reduce costs for retailers.</p>
               </div>
 
               <div class="col-md-6 icon-box position-relative">
@@ -336,8 +339,8 @@
                 </p>
                 <ul>
                   <li><i class="bi bi-check2-all"></i> Plug-and-play Android POS terminals.</li>
-                  <li><i class="bi bi-check2-all"></i> Real-time reporting &amp; analytics for retailers.</li>
-                  <li><i class="bi bi-check2-all"></i> Dedicated support &amp; documentation.</li>
+                  <li><i class="bi bi-check2-all"></i> Real-time reporting & analytics for retailers.</li>
+                  <li><i class="bi bi-check2-all"></i> Dedicated support & documentation.</li>
                 </ul>
                 <p>
                   Ready to modernize your payment experience? 
@@ -361,7 +364,7 @@
                 </p>
                 <ul>
                   <li><i class="bi bi-check2-all"></i> Partnerships with leading payment gateways.</li>
-                  <li><i class="bi bi-check2-all"></i> Additional stablecoin &amp; fiat on/off ramps.</li>
+                  <li><i class="bi bi-check2-all"></i> Additional stablecoin & fiat on/off ramps.</li>
                   <li><i class="bi bi-check2-all"></i> Developer ecosystem for third-party add-ons.</li>
                 </ul>
                 <p>
@@ -370,7 +373,7 @@
                 </p>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/working-3.jpg" alt="Scaling &amp; Partnerships" class="img-fluid">
+                <img src="assets/img/working-3.jpg" alt="Scaling & Partnerships" class="img-fluid">
               </div>
             </div>
           </div><!-- /Tab 3 Content -->
@@ -503,7 +506,7 @@
               <div class="card-body">
                 <h5 class="card-title">Mobile Wallet</h5>
                 <p class="card-text">
-                  Our mobile wallet app for iOS and Android supports XRP &amp; RLUSD on XRPL, and native tokens plus stablecoins on Stellar.
+                  Our mobile wallet app for iOS and Android supports XRP &amp; RLUSD on XRPL, and native tokens plus stablecoins on Solana and Stellar.
                   Users can make payments at our POS terminals or safely manage and transfer their tokens.
                 </p>
               </div>
@@ -516,7 +519,7 @@
               <div class="card-body">
                 <h5 class="card-title">Multi-Blockchain Support</h5>
                 <p class="card-text">
-                  Our system supports XRP &amp; RLUSD on XRPL, and also supports native tokens and stablecoins on Stellar.
+                  Our system supports XRP &amp; RLUSD on XRPL, and also supports native tokens and stablecoins on both Solana and Stellar.
                 </p>
               </div>
             </div>
@@ -585,7 +588,7 @@
                 </p>
               </div>
             </div>
-            <!-- Additional testimonial items -->
+            <!-- Additional testimonial items can be added here -->
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/dan_schulman_bio_photo_300x375.jpg" class="testimonial-img" alt="">
@@ -633,7 +636,7 @@
           <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
             <div class="faq-container">
 
-              <!-- FAQ #1 -->
+              <!-- FAQ #1 (Original) -->
               <div class="faq-item faq-active">
                 <h3>How does StablePay work?</h3>
                 <div class="faq-content">
@@ -646,12 +649,12 @@
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div>
 
-              <!-- FAQ #2 -->
+              <!-- FAQ #2 (Original) -->
               <div class="faq-item">
                 <h3>What cryptocurrencies are supported?</h3>
                 <div class="faq-content">
                   <p>
-                    Our system supports XRP &amp; RLUSD on XRPL, and native tokens plus stablecoins on Stellar.
+                    Our system supports XRP &amp; RLUSD on XRPL, and native tokens plus stablecoins on both Solana and Stellar.
                   </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
@@ -662,7 +665,7 @@
                 <h3>Do I need a bank account to accept payments?</h3>
                 <div class="faq-content">
                   <p>
-                    No bank account is required. All transactions occur on-chain using stablecoins or other supported tokens.
+                    No bank account is required. All transactions happen on-chain using stablecoins or other supported tokens.
                   </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
@@ -695,7 +698,7 @@
                 <h3>How secure are my funds and transactions?</h3>
                 <div class="faq-content">
                   <p>
-                    We leverage the security of underlying blockchains (XRPL and Stellar) for all transactions, and our wallet employs robust encryption and secure key management.
+                    We leverage the security of underlying blockchains (XRPL, Solana, Stellar) for all transactions, and our wallet employs robust encryption and secure key management.
                   </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
@@ -728,7 +731,7 @@
                 <h3>Does the mobile wallet support regular crypto transfers?</h3>
                 <div class="faq-content">
                   <p>
-                    Yes. In addition to paying at our POS terminals, users can send, receive, and store supported tokens directly within the StablePay wallet.
+                    Yes. Besides paying at our POS terminals, users can send, receive, and store supported tokens directly within the StablePay wallet.
                   </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
