Polygon to Stellar

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <p>
               StablePay is on a mission to empower retailers and consumers with instant, low-cost crypto transactions.
               We combine secure Android POS terminals with NFC capabilities and a versatile mobile wallet app for iOS and Android.
-              Our wallet supports XRP &amp; RLUSD on XRPL, and supports native tokens as well as stablecoins (USDC &amp; EURC) on both Solana and Stellar,
+              Our wallet supports XRP &amp; RLUSD on XRPL, and will also support native tokens as well as stablecoins (USDC &amp; EURC) on both Solana and Stellar,
               enabling users to pay at our POS terminals or securely manage and transfer their tokens.
             </p>
             <a href="#" class="about-btn align-self-center align-self-xl-start">
@@ -193,7 +193,7 @@
               <div class="col-md-6 icon-box position-relative">
                 <i class="bi bi-credit-card-2-front"></i>
                 <h4><a href="" class="stretched-link">Ultra-Low Fees</a></h4>
-                <p>We leverage stablecoins on XRPL, Solana, and Stellar to reduce costs for retailers.</p>
+                <p>We leverage stablecoins on XRPL, and in the near future Solana and Stellar, to reduce costs for retailers.</p>
               </div>
 
               <div class="col-md-6 icon-box position-relative">
@@ -315,7 +315,7 @@
               ensuring reliable transactions, instant settlements, and an intuitive user experience.
             </p>
             <ul>
-              <li><i class="bi bi-check2-all"></i> XRPL, Solana, and Stellar integration.</li>
+              <li><i class="bi bi-check2-all"></i> XRPL already implemented, soon Solana and Stellar.</li>
               <li><i class="bi bi-check2-all"></i> Android POS pilot testing with NFC & QR.</li>
               <li><i class="bi bi-check2-all"></i> Early feedback loop to refine user flows.</li>
             </ul>
@@ -508,7 +508,7 @@
               <div class="card-body">
                 <h5 class="card-title">Mobile Wallet</h5>
                 <p class="card-text">
-                  Our mobile wallet app for iOS and Android supports XRP &amp; RLUSD on XRPL, and native tokens plus stablecoins (USDC &amp; EURC) on Solana and Stellar.
+                  Our mobile wallet app for iOS and Android supports XRP &amp; RLUSD on XRPL, and will soon have native tokens plus stablecoins (USDC &amp; EURC) on Solana and Stellar.
                   Users can make payments at our POS terminals or safely manage and transfer their tokens.
                 </p>
               </div>
@@ -521,7 +521,7 @@
               <div class="card-body">
                 <h5 class="card-title">Multi-Blockchain Support</h5>
                 <p class="card-text">
-                  Our system supports XRP &amp; RLUSD on XRPL, and also supports native tokens and stablecoins (USDC &amp; EURC) on both Solana and Stellar.
+                  Our system supports XRP &amp; RLUSD on XRPL, and will soon also support native tokens and stablecoins (USDC &amp; EURC) on both Solana and Stellar.
                 </p>
               </div>
             </div>
@@ -658,7 +658,7 @@
                 <h3>What cryptocurrencies are supported?</h3>
                 <div class="faq-content">
                   <p>
-                    Our system supports XRP &amp; RLUSD on XRPL, and native tokens plus stablecoins 
+                    Our system supports XRP &amp; RLUSD on XRPL, and in the near future also native tokens plus stablecoins 
                     (USDC &amp; EURC) on both Solana and Stellar. We continually evaluate adding more 
                     assets based on stability, liquidity, and user demand.
                   </p>
@@ -709,7 +709,7 @@
                 <h3>How secure are my funds and transactions?</h3>
                 <div class="faq-content">
                   <p>
-                    We leverage the security of underlying blockchains (XRPL, Solana, Stellar) for 
+                    We leverage the security of underlying blockchains (XRPL, soon also Solana and Stellar) for 
                     all transactions. Additionally, our mobile wallet app employs robust encryption 
                     and secure key management to protect user funds.
                   </p>
