--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
             <h3>About StablePay</h3>
             <p>
               StablePay is on a mission to empower retailers and consumers with instant, low-cost crypto transactions.
-              We combine secure Android POS terminals with NFC capabilities and a versatile mobile wallet app for iOS and Android.
+              We combine secure Android Point-of-Sale terminals with NFC capabilities and a versatile mobile wallet app for iOS and Android.
               Our wallet supports XRP &amp; RLUSD on XRPL, and will also support native tokens as well as stablecoins (USDC &amp; EURC) on both Solana and Stellar,
-              enabling users to pay at our POS terminals or securely manage and transfer their tokens.
+              enabling users to pay at our Point-of-Sale terminals or securely manage and transfer their tokens.
             </p>
             <a href="#" class="about-btn align-self-center align-self-xl-start">
               <span>Learn More</span> <i class="bi bi-chevron-right"></i>
@@ -205,13 +205,13 @@
               <div class="col-md-6 icon-box position-relative">
                 <i class="bi bi-wifi"></i>
                 <h4><a href="" class="stretched-link">NFC &amp; QR Payments</a></h4>
-                <p>Our POS terminals enable seamless contactless or QR-based transactions.</p>
+                <p>Our Point-of-Sale terminals enable seamless contactless or QR-based transactions.</p>
               </div>
 
               <div class="col-md-6 icon-box position-relative">
                 <i class="bi bi-gear-wide-connected"></i>
                 <h4><a href="" class="stretched-link">Pre-Installed Software</a></h4>
-                <p>We provide or lease Android POS devices ready to go out of the box—no extra apps needed.</p>
+                <p>We provide or lease Android Point-of-Sale devices ready to go out of the box—no extra apps needed.</p>
               </div>
             </div>
           </div>
@@ -316,7 +316,7 @@
             </p>
             <ul>
               <li><i class="bi bi-check2-all"></i> XRPL already implemented, soon Solana and Stellar.</li>
-              <li><i class="bi bi-check2-all"></i> Android POS pilot testing with NFC & QR.</li>
+              <li><i class="bi bi-check2-all"></i> Android Point-of-Sale pilot testing with NFC & QR.</li>
               <li><i class="bi bi-check2-all"></i> Early feedback loop to refine user flows.</li>
             </ul>
             <p>
@@ -340,7 +340,7 @@
               near-zero fees and instant settlements to boost their profitability.
             </p>
             <ul>
-              <li><i class="bi bi-check2-all"></i> Plug-and-play Android POS terminals.</li>
+              <li><i class="bi bi-check2-all"></i> Plug-and-play Android Point-of-Sale terminals.</li>
               <li><i class="bi bi-check2-all"></i> Real-time reporting & analytics for retailers.</li>
               <li><i class="bi bi-check2-all"></i> Dedicated support & documentation.</li>
             </ul>
@@ -390,7 +390,7 @@
               of the globe, simplifying commerce for merchants and customers alike.
             </p>
             <ul>
-              <li><i class="bi bi-check2-all"></i> Multi-language POS and wallet interfaces.</li>
+              <li><i class="bi bi-check2-all"></i> Multi-language Point-of-Sale and wallet interfaces.</li>
               <li><i class="bi bi-check2-all"></i> Compliance and local regulations readiness.</li>
               <li><i class="bi bi-check2-all"></i> Continuous innovation in security & UX.</li>
             </ul>
@@ -497,7 +497,7 @@
               <img src="assets/img/solution/pexels-pavel-danilyuk-6812431.jpg" class="card-img-top" alt="NFC Contactless Payments">
               <div class="card-body">
                 <h5 class="card-title">NFC Contactless Payments</h5>
-                <p class="card-text">Customers simply tap their phones on our Android POS terminals for secure, contactless checkout.</p>
+                <p class="card-text">Customers simply tap their phones on our Android Point-of-Sale terminals for secure, contactless checkout.</p>
               </div>
             </div>
           </div>
@@ -509,7 +509,7 @@
                 <h5 class="card-title">Mobile Wallet</h5>
                 <p class="card-text">
                   Our mobile wallet app for iOS and Android supports XRP &amp; RLUSD on XRPL, and will soon have native tokens plus stablecoins (USDC &amp; EURC) on Solana and Stellar.
-                  Users can make payments at our POS terminals or safely manage and transfer their tokens.
+                  Users can make payments at our Point-of-Sale terminals or safely manage and transfer their tokens.
                 </p>
               </div>
             </div>
@@ -532,7 +532,7 @@
               <img src="assets/img/solution/pexels-imin-technology-276315592-12935063.jpg" class="card-img-top" alt="Seamless Integration">
               <div class="card-body">
                 <h5 class="card-title">Seamless Integration</h5>
-                <p class="card-text">We supply or lease pre-configured Android POS devices—no extra downloads or apps required.</p>
+                <p class="card-text">We supply or lease pre-configured Android Point-of-Sale devices—no extra downloads or apps required.</p>
               </div>
             </div>
           </div>
@@ -645,7 +645,7 @@
                 <h3>How does StablePay work?</h3>
                 <div class="faq-content">
                   <p>
-                    StablePay integrates our Android POS devices with a mobile wallet app for real-time, 
+                    StablePay integrates our Android Point-of-Sale devices with a mobile wallet app for real-time, 
                     contactless crypto transactions. Retailers can accept payments in supported tokens, 
                     while customers enjoy fast, secure checkouts via NFC or QR code.
                   </p>
@@ -681,11 +681,11 @@
 
               <!-- FAQ #4 -->
               <div class="faq-item">
-                <h3>Is KYC required to use the POS terminals?</h3>
+                <h3>Is KYC required to use the Point-of-Sale terminals?</h3>
                 <div class="faq-content">
                   <p>
                     Yes. Completing KYC (Know Your Customer) verification is necessary to operate our 
-                    POS terminals. This helps us comply with regulations and maintain a secure, 
+                    Point-of-Sale terminals. This helps us comply with regulations and maintain a secure, 
                     trusted environment for all users.
                   </p>
                 </div>
@@ -735,7 +735,7 @@
                 <h3>Can I use StablePay if I'm new to crypto?</h3>
                 <div class="faq-content">
                   <p>
-                    Absolutely. Our POS terminals are designed to be user-friendly for retailers, 
+                    Absolutely. Our Point-of-Sale terminals are designed to be user-friendly for retailers, 
                     and our mobile wallet app simplifies sending, receiving, and storing supported 
                     tokens. We also provide documentation and support to help you get started.
                   </p>
@@ -748,7 +748,7 @@
                 <h3>Does the mobile wallet support regular crypto transfers?</h3>
                 <div class="faq-content">
                   <p>
-                    Yes. Besides paying at our POS terminals, users can send, receive, and store 
+                    Yes. Besides paying at our Point-of-Sale terminals, users can send, receive, and store 
                     supported tokens directly within the StablePay wallet. It’s an all-in-one 
                     solution for everyday crypto management.
                   </p>
@@ -922,7 +922,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Crypto POS</a></li>
+            <li><a href="#">Crypto Point-of-Sale</a></li>
             <li><a href="#">NFC Payments</a></li>
             <li><a href="#">QR Code Integration</a></li>
             <li><a href="#">Stablecoin Support</a></li>
