--- a/index.html
+++ b/index.html
@@ -526,12 +526,12 @@
               </div>
             </div>
           </div>
-          <!-- Card 6: Seamless Integration -->
+          <!-- Card 6: Easy Integration -->
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
-              <img src="assets/img/solution/pexels-imin-technology-276315592-12935063.jpg" class="card-img-top" alt="Seamless Integration">
+              <img src="assets/img/solution/pexels-imin-technology-276315592-12935063.jpg" class="card-img-top" alt="Easy Integration">
               <div class="card-body">
-                <h5 class="card-title">Seamless Integration</h5>
+                <h5 class="card-title">Easy Integration</h5>
                 <p class="card-text">We supply or lease pre-configured Android Point-of-Sale devices—no extra downloads or apps required.</p>
               </div>
             </div>
