--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
         <div class="col-lg-4 col-md-12 footer-newsletter">
           <h4>Our Newsletter</h4>
           <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-          <form action="forms/newsletter.php" method="post" class="php-email-form">
+          <form action="https://formspree.io/f/xanenbna" method="post" data-aos="fade-up" data-aos-delay="500">
             <div class="newsletter-form">
               <input type="email" name="email" placeholder="Enter your email...">
               <input type="submit" value="Subscribe">
