--- a/index.html
+++ b/index.html
@@ -858,8 +858,9 @@
             </div>
           </div>
           <div class="col-lg-6">
+            <div id="form-thanks"></div>
             <form action="https://formspree.io/f/xldjdlev" method="post" data-aos="fade-up" data-aos-delay="500">
-            <!--<form action="https://formspree.io/f/xldjdlev" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="500">-->
+              <input type="hidden" name="_next" value="https://stablepay.finance/index.html#form-thanks" />
               <div class="row gy-4">
                 <div class="col-md-6">
                   <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
@@ -932,9 +933,11 @@
         </div>
   
         <div class="col-lg-4 col-md-12 footer-newsletter">
+          <div id="newsletter-thanks"></div>
           <h4>Our Newsletter</h4>
           <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
           <form action="https://formspree.io/f/xanenbna" method="post" data-aos="fade-up" data-aos-delay="500">
+            <input type="hidden" name="_next" value="https://stablepay.finance/index.html#newsletter-thanks" />
             <div class="newsletter-form">
               <input type="email" name="email" placeholder="Enter your email...">
               <input type="submit" value="Subscribe">
