--- a/index.html
+++ b/index.html
@@ -797,6 +797,7 @@
               </div>
               <div class="member-info">
                 <h4>André Grillo</h4>
+                <span>andre.grillo@stablepay.finance</span>
                 <span>Founder</span>
               </div>
             </div>
@@ -816,6 +817,7 @@
               </div>
               <div class="member-info">
                 <h4>Paulo Camilo</h4>
+                <span>paulo.camilo@stablepay.finance</span>
                 <span>Founder</span>
               </div>
             </div>
@@ -830,58 +832,30 @@
         <h2>Contact</h2>
         <p>Get in touch to learn more about StablePay or schedule a demo</p>
       </div>
+    
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4">
-          <div class="col-lg-6 ">
-            <div class="row gy-4">
-              <div class="col-lg-12">
-                <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
-                  <i class="bi bi-geo-alt"></i>
-                  <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="300">
-                  <i class="bi bi-telephone"></i>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
-                  <i class="bi bi-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>info@stablepay.finance</p>
-                </div>
-              </div>
-            </div>
+          <!-- 1) The iframe row -->
+          <div class="col-12">
+            <!-- Embed the contact form in an iframe -->
+            <iframe
+              src="contact-form.html"
+              style="width: 100%; height: 350px; border: none;"
+            >
+            </iframe>
           </div>
-          <div class="col-lg-6">
-            <div id="form-thanks"></div>
-            <form action="https://formspree.io/f/xldjdlev" method="post" data-aos="fade-up" data-aos-delay="500">
-              <input type="hidden" name="_next" value="https://stablepay.finance/index.html#form-thanks" />
-              <div class="row gy-4">
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="4" placeholder="Message" required=""></textarea>
-                </div>
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                  <button type="submit">Send Message</button>
-                </div>
-              </div>
-            </form>
+    
+          <!-- 2) The “Email Us” card row -->
+          <div class="col-12">
+            <div
+              class="info-item d-flex flex-column justify-content-center align-items-center"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <i class="bi bi-envelope"></i>
+              <h3>Email Us</h3>
+              <p>info@stablepay.finance</p>
+            </div>
           </div>
         </div>
       </div>
@@ -897,9 +871,9 @@
             <span class="sitename">StablePay</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
+            <!--<p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>-->
             <p><strong>Email:</strong> <span>info@stablepay.finance</span></p>
           </div>
           <div class="social-links d-flex mt-4">
