--- a/newsletter-form.html
+++ b/newsletter-form.html
@@ -15,7 +15,7 @@
       <input type="email" name="email" placeholder="Enter your email..." required>
       <input type="submit" value="Subscribe">
     </div>
-    <div class="loading">Loading</div>
+    <!--<div class="loading">Loading</div>-->
     <div class="error-message"></div>
     <div class="sent-message">Your subscription request has been sent. Thank you!</div>
   </form>
