--- a/index.html
+++ b/index.html
@@ -789,10 +789,10 @@
               <div class="member-img">
                 <img src="assets/img/team/ag.png" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://x.com/agrillo74"><i class="bi bi-twitter-x"></i></a>
+                  <!--<a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
+                  <a href="https://www.linkedin.com/in/andre-grillo/?locale=en_US"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
