--- a/index.html
+++ b/index.html
@@ -809,9 +809,9 @@
               <div class="member-img">
                 <img src="assets/img/team/pc.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <!--<a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>-->
                   <a href="https://www.linkedin.com/in/pauloccamilo/?locale=en_US"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
