--- a/index.html
+++ b/index.html
@@ -883,6 +883,9 @@
             <a href="https://linkedin.com"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-12">
+        </div>
   
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
@@ -906,7 +909,7 @@
           </ul>
         </div>
   
-        <div class="col-lg-4 col-md-12 footer-newsletter">
+        <!--<div class="col-lg-4 col-md-12 footer-newsletter">
           <div id="newsletter-thanks"></div>
           <h4>Our Newsletter</h4>
           <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
@@ -920,7 +923,7 @@
             <div class="error-message"></div>
             <div class="sent-message">Your subscription request has been sent. Thank you!</div>
           </form>
-        </div>
+        </div>-->
   
       </div>
     </div>
